--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "resume_cv",
+  "name": "coding_test",
   "version": "1.0.0",
   "description": "laicheehoong's resume",
   "main": "server.js",
