Revert "first commit"
This reverts commit 05f454482e0d76b20d74210c66d1f47c38dbd8c1.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coding_test",
+  "name": "resume_cv",
   "version": "1.0.0",
   "description": "laicheehoong's resume",
   "main": "server.js",
